把jquery和 图片资源放进来，方便大家直接看效果

--- a/imgCut.html
+++ b/imgCut.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="imgCut.css">
 </head>
 <body>
-<img src="../psb.jpg" id="testImg">
+<img src="psb.jpg" id="testImg">
 </body>
-<script type="text/javascript" src="../../jquery.js"></script>
+<script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="imgCut.js"></script>
 <script type="text/javascript">
 var a=imgCut(testImg);
