增加 比例收缩。 width/height
由于时间有限，所以 比例收缩时 超界只是做简单处理。
后面会进行进一步处理

--- a/imgCut.html
+++ b/imgCut.html
@@ -11,6 +11,8 @@
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="imgCut.js"></script>
 <script type="text/javascript">
-var a=imgCut(testImg);
+var a=imgCut(testImg,{
+	aspectRatio: 1
+});
 </script>
 </html>
