--- a/imgCut.html
+++ b/imgCut.html
@@ -4,6 +4,17 @@
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
     <title>imgCut</title>
     <link rel="stylesheet" type="text/css" href="imgCut.css">
+    <style type="text/css">
+    body,html{
+    	margin:0;
+    	width:100%;
+    	height:100%;
+    }
+    #testImg{
+    	width:853px;
+    	height:640px;
+    }
+    </style>
 </head>
 <body>
 <img src="psb.jpg" id="testImg">
